# garage

./: db.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
migrations/: env.py
migrations/versions/: 0f7b23f8bc49_add_all_tables.py  126f4e6c2868_add_users.py  5bc84ddc3f9f_status_investor_profit.py  d08674594c08_add_investor_percentage_to_rentals.py
routers/: authentication.py  cars.py  rentals.py  renters.py
schemas/: cars.py  rentals.py  renters.py
services/: authentication.py  cars.py  rentals.py  renters.py
