[tool.poetry]
name = "garazh"
version = "0.1.0"
description = ""
authors = ["Abdunazarov <abdunazarovdior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
pydantic = {extras = ["all"], version = "^2.8.2"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
